gateway-api-demo-app-a403d69.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-gateway-api-demo-service-a403d69
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: k8s-gateway-api-demo-a403d69
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: k8s-gateway-api-demo-a403d69
  name: k8s-gateway-api-demo-a403d69
spec:
  replicas: 3
  selector:
    matchLabels:
      app: k8s-gateway-api-demo-a403d69
  template:
    metadata:
      labels:
        app: k8s-gateway-api-demo-a403d69
    spec:
      containers:
      - env:
        - name: POD_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: POD_IP
          valueFrom:
            fieldRef:
              fieldPath: status.podIP
        image: msathetech/k8s-gateway-demo:a403d69
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 10
        name: k8s-gateway-api-demo
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 10
        resources:
          limits:
            cpu: "1"
            memory: 256Mi
          requests:
            cpu: "0.5"
